# PAGE

./: README.md
backend/: .env  pyproject.toml
backend/app/: dependencies.py  main.py  models.py
backend/app/services/: rag_service.py  rag_services.py
backend/page_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: confest.py  test_main.py  test_rag_service.py
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/screens/: home_screen.dart
frontend/lib/services/: api_service.dart
